@@ -1,3 +1,7 @@
+2013-08-27  Roland Clobus <rclobus@rclobus.nl>
+	* metaserver/main.c, common/network.c: Fixed memory leaks in the
+	metaserver.
+
 2013-06-28  Roland Clobus <rclobus@rclobus.nl>
 	* server/meta.c: Check whether the metaserver is still alive.
 	* server/meta.c, server/server.c, server/server.h: Reconnect to the
